--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       justify-content: center;
       gap: 25px;
       margin-top: 20px;
+      align-items: center; /* Ensure the items are aligned on the same line */
     }
 
     .time-section {
@@ -73,6 +74,8 @@
       font-size: 16px; /* Adjusted label size */
       letter-spacing: 1px;
       margin-top: 3px;
+      color: black; /* Make label text black */
+      font-weight: bold; /* Make label text bold */
     }
 
     /* Footer Section */
