--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     #countdown {
       display: flex;
       justify-content: center;
-      gap: 25px;
+      align-items: center;
+      gap: 40px; /* Increased gap for better spacing between elements */
       margin-top: 20px;
-      align-items: center; /* Ensure the items are aligned on the same line */
     }
 
     .time-section {
@@ -71,7 +71,7 @@
     }
 
     .time-section .label {
-      font-size: 16px; /* Adjusted label size */
+      font-size: 20px; /* Adjusted label size */
       letter-spacing: 1px;
       margin-top: 3px;
       color: black; /* Make label text black */
