--- a/index.html
+++ b/index.html
@@ -33,28 +33,29 @@
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 40px; /* Adjusted font size */
+      font-size: 40px;
       margin-bottom: 10px;
     }
 
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 36px; /* Adjusted font size */
+      font-size: 36px;
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 180px; /* Adjust width for better visibility on mobile */
+      width: 180px; 
       margin-bottom: 20px;
     }
 
+    /* Countdown Styles */
     #countdown {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 40px; /* Increased gap for better spacing between elements */
+      gap: 30px; /* Gap between time sections */
       margin-top: 20px;
     }
 
@@ -65,17 +66,16 @@
     }
 
     .time-section .number {
-      font-size: 48px; /* Bigger font size for numbers */
+      font-size: 48px; 
       font-weight: bold;
-      margin-bottom: 5px;
     }
 
     .time-section .label {
-      font-size: 20px; /* Adjusted label size */
+      font-size: 18px;
       letter-spacing: 1px;
-      margin-top: 3px;
-      color: black; /* Make label text black */
-      font-weight: bold; /* Make label text bold */
+      margin-top: 5px;
+      color: black; 
+      font-weight: bold;
     }
 
     /* Footer Section */
@@ -88,7 +88,7 @@
       text-align: center;
     }
 
-    /* Styling for Social Media Boxes inside the footer */
+    /* Social Media Box Styles */
     .social-media-container {
       display: flex;
       justify-content: center;
@@ -101,7 +101,7 @@
     }
 
     .social-media-box img {
-      width: 40px; /* Adjust image size */
+      width: 40px;
       height: 40px;
       border-radius: 5px;
     }
@@ -109,23 +109,23 @@
     /* Mobile responsiveness */
     @media (max-width: 768px) {
       h1, h2 {
-        font-size: 30px; /* Make heading font smaller for mobile */
+        font-size: 30px;
       }
 
       #logo {
-        width: 160px; /* Make logo a bit smaller for mobile */
+        width: 160px;
       }
 
       .time-section .number {
-        font-size: 36px; /* Bigger numbers but not too large for mobile */
+        font-size: 36px;
       }
 
       .time-section .label {
-        font-size: 14px; /* Smaller labels for mobile */
+        font-size: 14px;
       }
 
       .social-media-box img {
-        width: 40px; /* Social media icons scaled for mobile */
+        width: 40px;
         height: 40px;
       }
     }
