--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 30px; /* Gap between time sections */
+      gap: 40px; /* Adjusted gap between time sections */
       margin-top: 20px;
     }
 
@@ -66,7 +66,7 @@
     }
 
     .time-section .number {
-      font-size: 48px; 
+      font-size: 64px; 
       font-weight: bold;
     }
 
@@ -149,19 +149,19 @@
 
   <div id="countdown">
     <div class="time-section">
-      <div id="days" class="number">0</div>
+      <div id="days" class="number">105</div>
       <div class="label">D</div>
     </div>
     <div class="time-section">
-      <div id="hours" class="number">0</div>
+      <div id="hours" class="number">3</div>
       <div class="label">H</div>
     </div>
     <div class="time-section">
-      <div id="minutes" class="number">0</div>
+      <div id="minutes" class="number">59</div>
       <div class="label">M</div>
     </div>
     <div class="time-section">
-      <div id="seconds" class="number">0</div>
+      <div id="seconds" class="number">40</div>
       <div class="label">S</div>
     </div>
   </div>
