--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 40px; /* Adjusted gap between time sections */
+      gap: 30px; /* Adjusted gap between time sections */
       margin-top: 20px;
+      flex-wrap: wrap; /* Ensures responsiveness on mobile */
     }
 
     .time-section {
@@ -66,7 +67,7 @@
     }
 
     .time-section .number {
-      font-size: 64px; 
+      font-size: 64px;
       font-weight: bold;
     }
 
@@ -74,7 +75,7 @@
       font-size: 18px;
       letter-spacing: 1px;
       margin-top: 5px;
-      color: black; 
+      color: black;
       font-weight: bold;
     }
 
@@ -128,6 +129,15 @@
         width: 40px;
         height: 40px;
       }
+
+      /* Ensure alignment and proper spacing on mobile */
+      #countdown {
+        flex-direction: row; /* Ensures items are on the same line */
+      }
+
+      .time-section {
+        align-items: center;
+      }
     }
 
     /* Make countdown text fit well on mobile */
@@ -168,7 +178,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Matt Scianna. All Rights Reserved.</p>
+    <p>&copy; 2025 Matt Scianna. Based in New York.</p>
 
     <!-- Social Media Links inside Footer Box -->
     <div class="social-media-container">
