--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     /* Styling for the logo */
     #logo {
-      width: 180px; 
+      width: 180px;
       margin-bottom: 20px;
     }
 
@@ -55,7 +55,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 30px; /* Adjusted gap between time sections */
+      gap: 20px; /* Adjusted gap between time sections */
       margin-top: 20px;
       flex-wrap: wrap; /* Ensures responsiveness on mobile */
     }
@@ -67,12 +67,12 @@
     }
 
     .time-section .number {
-      font-size: 64px;
+      font-size: 48px;  /* Reduced size for the numbers */
       font-weight: bold;
     }
 
     .time-section .label {
-      font-size: 18px;
+      font-size: 16px; /* Reduced label size */
       letter-spacing: 1px;
       margin-top: 5px;
       color: black;
@@ -118,11 +118,11 @@
       }
 
       .time-section .number {
-        font-size: 36px;
+        font-size: 36px; /* Smaller numbers for mobile */
       }
 
       .time-section .label {
-        font-size: 14px;
+        font-size: 14px; /* Smaller labels for mobile */
       }
 
       .social-media-box img {
