--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
       margin-bottom: 10px;
     }
 
+    /* Increase size for FOOTBALL JERSEYS */
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 36px;
+      font-size: 42px; /* Slightly larger to adjust space */
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
@@ -67,12 +68,12 @@
     }
 
     .time-section .number {
-      font-size: 48px;  /* Reduced size for the numbers */
+      font-size: 60px;  /* Slightly larger numbers */
       font-weight: bold;
     }
 
     .time-section .label {
-      font-size: 16px; /* Reduced label size */
+      font-size: 18px; /* Slightly larger labels */
       letter-spacing: 1px;
       margin-top: 5px;
       color: black;
@@ -118,11 +119,11 @@
       }
 
       .time-section .number {
-        font-size: 36px; /* Smaller numbers for mobile */
+        font-size: 48px; /* Smaller numbers for mobile */
       }
 
       .time-section .label {
-        font-size: 14px; /* Smaller labels for mobile */
+        font-size: 16px; /* Smaller labels for mobile */
       }
 
       .social-media-box img {
