--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 20px; /* Adjusted gap between time sections */
+      gap: 40px; /* Increased gap between time sections */
       margin-top: 20px;
       flex-wrap: wrap; /* Ensures responsiveness on mobile */
     }
@@ -75,7 +75,7 @@
     .time-section .label {
       font-size: 18px; /* Slightly larger labels */
       letter-spacing: 1px;
-      margin-top: 5px;
+      margin-top: 10px; /* Increased spacing between numbers and labels */
       color: black;
       font-weight: bold;
     }
