--- a/index.html
+++ b/index.html
@@ -151,25 +151,25 @@
   <div id="countdown">
     <div class="time-section">
       <div id="days" class="number">105</div>
-      <div class="label">D</div>
+      <div class="label">DAY</div>
     </div>
     <div class="time-section">
       <div id="hours" class="number">3</div>
-      <div class="label">H</div>
+      <div class="label">HRS</div>
     </div>
     <div class="time-section">
       <div id="minutes" class="number">59</div>
-      <div class="label">M</div>
+      <div class="label">MIN</div>
     </div>
     <div class="time-section">
       <div id="seconds" class="number">40</div>
-      <div class="label">S</div>
+      <div class="label">SEC</div>
     </div>
   </div>
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Matt Scianna. Based in New York.</p>
+    <p>&copy; 2025 Matt Scianna. Based in new York.</p>
 
     <!-- Social Media Links inside Footer Box -->
     <div class="social-media-container">
