--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matt Scianna</title>
 
-  <!-- Importing Cardo font from Google Fonts -->
+  <!-- Importing Cardo and Jersey 25 font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 
   <style>
     /* Use @font-face to load the Jersey 25 font (upload the font file to your repo) */
@@ -37,12 +38,13 @@
       margin-bottom: 10px;
     }
 
-    /* FOOTBALL JERSEYS in Jersey 25 font */
+    /* FOOTBALL JERSEYS in Jersey 25 font with green color */
     h2 {
-      font-family: 'Jersey25', sans-serif;
+      font-family: 'Jersey 25', sans-serif; 
       font-size: 40px;
       margin-bottom: 40px;
       letter-spacing: 2px;
+      color: #4C8527; /* Green color */
     }
 
     /* Styling for the logo */
@@ -54,10 +56,10 @@
     /* Countdown Styles */
     #countdown {
       display: flex;
-      justify-content: space-evenly; /* Spacing out items evenly */
+      justify-content: space-evenly;
       align-items: center;
       margin-top: 20px;
-      gap: 30px; /* Added gap between the timer items */
+      gap: 30px;
       width: 100%;
       max-width: 100%;
     }
@@ -69,7 +71,7 @@
     }
 
     .time-section .number {
-      font-size: 60px;  /* Adjusted for better visibility */
+      font-size: 60px; 
       font-weight: bold;
     }
 
@@ -120,11 +122,11 @@
       }
 
       .time-section .number {
-        font-size: 48px; /* Smaller numbers for mobile */
+        font-size: 48px; 
       }
 
       .time-section .label {
-        font-size: 16px; /* Smaller labels for mobile */
+        font-size: 16px; 
       }
 
       .social-media-box img {
@@ -134,8 +136,8 @@
 
       /* Make sure countdown remains horizontal on mobile */
       #countdown {
-        flex-wrap: nowrap; /* Ensure items stay in a single line */
-        justify-content: space-evenly; /* Maintain even spacing */
+        flex-wrap: nowrap;
+        justify-content: space-evenly;
       }
     }
   </style>
@@ -169,7 +171,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Matt Scianna. Based in new York.</p>
+    <p>&copy; 2025 Matt Scianna. Based in New York.</p>
 
     <!-- Social Media Links inside Footer Box -->
     <div class="social-media-container">
