--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Matt Scianna</title>
 
-  <!-- Importing Cardo and Jersey 25 font from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&family=Cal+Sans&display=swap" rel="stylesheet">
 
   <style>
-    /* Use @font-face to load the Jersey 25 font (upload the font file to your repo) */
+    /* Custom Font for Jersey 25 (if still needed elsewhere) */
     @font-face {
       font-family: 'Jersey25';
-      src: url('fonts/jersey-25.ttf') format('truetype'); /* Make sure the path is correct */
+      src: url('fonts/jersey-25.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
@@ -34,117 +33,107 @@
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 40px;
+      font-size: 32px;
+      margin-bottom: 5px;
+    }
+
+    /* FOOTBALL JERSEYS */
+    h2 {
+      font-family: 'Graduate', sans-serif;
+      font-size: 28px;
+      color: #D7263D;
+      -webkit-text-stroke: 0.8px black; /* Thin black outline */
+      margin-bottom: 30px;
+      letter-spacing: 2px;
+    }
+
+    #logo {
+      width: 180px;
+      height: auto;
       margin-bottom: 10px;
     }
 
-    /* FOOTBALL JERSEYS in Jersey 25 font with green color */
-    h2 {
-      font-family: 'Jersey 25', sans-serif; 
-      font-size: 40px;
-      margin-bottom: 40px;
-      letter-spacing: 2px;
-      color: #4C8527; /* Green color */
-    }
-
-    /* Styling for the logo */
-    #logo {
-      width: 180px;
-      margin-bottom: 20px;
-    }
-
-    /* Countdown Styles */
     #countdown {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: center;
       align-items: center;
-      margin-top: 20px;
-      gap: 30px;
-      width: 100%;
-      max-width: 100%;
+      gap: 40px;
+      margin: 20px 0;
+      flex-wrap: wrap;
     }
 
     .time-section {
       display: flex;
       flex-direction: column;
       align-items: center;
+      font-family: 'Cal Sans', sans-serif;
     }
 
-    .time-section .number {
-      font-size: 60px; 
+    .number {
+      font-size: 36px;
       font-weight: bold;
+      color: #D7263D;
     }
 
-    .time-section .label {
-      font-size: 18px;
-      letter-spacing: 1px;
-      margin-top: 10px;
+    .label {
+      font-family: 'Graduate', sans-serif;
+      font-size: 14px;
+      font-weight: bold;
       color: black;
-      font-weight: bold;
+      margin-top: 5px;
     }
 
-    /* Footer Section */
     footer {
-      margin-top: 50px;
-      padding: 20px;
+      margin-top: 40px;
       background-color: #8B0000;
-      color: white;
+      padding: 20px;
       width: 100%;
       text-align: center;
+      color: white;
     }
 
-    /* Social Media Box Styles */
-    .social-media-container {
+    .social-links {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
+      margin-top: 10px;
     }
 
-    .social-media-box {
-      display: inline-block;
-    }
-
-    .social-media-box img {
+    .social-links img {
       width: 40px;
       height: 40px;
-      border-radius: 5px;
+      object-fit: contain;
     }
 
-    /* Mobile responsiveness */
-    @media (max-width: 768px) {
-      h1, h2 {
-        font-size: 30px;
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 28px;
+      }
+
+      h2 {
+        font-size: 24px;
       }
 
       #logo {
-        width: 160px;
+        width: 140px;
       }
 
-      .time-section .number {
-        font-size: 48px; 
+      .number {
+        font-size: 32px;
       }
 
-      .time-section .label {
-        font-size: 16px; 
+      .label {
+        font-size: 12px;
       }
 
-      .social-media-box img {
-        width: 40px;
-        height: 40px;
-      }
-
-      /* Make sure countdown remains horizontal on mobile */
       #countdown {
-        flex-wrap: nowrap;
-        justify-content: space-evenly;
+        gap: 30px;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Your Logo (replace with your actual logo file path) -->
   <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
@@ -152,53 +141,38 @@
 
   <div id="countdown">
     <div class="time-section">
-      <div id="days" class="number">105</div>
+      <div id="days" class="number">0</div>
       <div class="label">DAY</div>
     </div>
     <div class="time-section">
-      <div id="hours" class="number">3</div>
+      <div id="hours" class="number">0</div>
       <div class="label">HRS</div>
     </div>
     <div class="time-section">
-      <div id="minutes" class="number">59</div>
+      <div id="minutes" class="number">0</div>
       <div class="label">MIN</div>
     </div>
     <div class="time-section">
-      <div id="seconds" class="number">40</div>
+      <div id="seconds" class="number">0</div>
       <div class="label">SEC</div>
     </div>
   </div>
 
-  <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Matt Scianna. Based in New York.</p>
-
-    <!-- Social Media Links inside Footer Box -->
-    <div class="social-media-container">
-      <!-- Instagram Link -->
-      <div class="social-media-box">
-        <a href="https://www.instagram.com/mattsciannany" target="_blank">
-          <img src="https://github.com/mattscianna/mattscianna/blob/Main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram Logo">
-        </a>
-      </div>
-
-      <!-- TikTok Link -->
-      <div class="social-media-box">
-        <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
-          <img src="https://github.com/mattscianna/mattscianna/blob/Main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok Logo">
-        </a>
-      </div>
+    <div>© 2025 Matt Scianna | Based in New York.</div>
+    <div class="social-links">
+      <a href="https://www.instagram.com/mattsciannany" target="_blank">
+        <img src="https://github.com/mattscianna/mattscianna/blob/Main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram">
+      </a>
+      <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
+        <img src="https://github.com/mattscianna/mattscianna/blob/Main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok">
+      </a>
     </div>
   </footer>
 
   <script>
-    const now = new Date();
-    const futureDate = new Date(
-      now.getFullYear(),
-      now.getMonth() + 3,
-      now.getDate() + 14,
-      now.getHours() + 5
-    );
+    // Set target date in UTC to match EST time (UTC-4)
+    const futureDate = new Date(Date.UTC(2025, 7, 9, 18, 0, 0)); 
 
     function updateCountdown() {
       const currentTime = new Date();
@@ -220,10 +194,7 @@
       document.getElementById("seconds").textContent = seconds;
     }
 
-    // Initial call to update the countdown
-    updateCountdown(); 
-
-    // Update countdown every second (1000 ms)
+    updateCountdown();
     setInterval(updateCountdown, 1000);
   </script>
 
