--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Matt Scianna</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&family=Cardo&family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -31,10 +31,9 @@
 
     /* FOOTBALL JERSEYS Title */
     h2 {
-      font-family: 'Graduate', sans-serif;
+      font-family: 'Cardo', serif;
       font-size: 28px;
-      color: #5B0202;
-      -webkit-text-stroke: 0.8px black;
+      color: #8B0000;
       margin-bottom: 30px;
       letter-spacing: 2px;
     }
@@ -62,10 +61,10 @@
 
     /* Timer Numbers */
     .number {
-      font-family: 'Alfa Slab One', cursive;
+      font-family: 'Cardo', serif;
       font-size: 36px;
       font-weight: bold;
-      color: #ff0808;
+      color: #8B0000;
     }
 
     /* Timer Labels DAY HRS MIN SEC */
@@ -83,7 +82,7 @@
       padding: 20px;
       width: 100%;
       text-align: center;
-      color: #EDE7C7;
+      color: #ffffff;
     }
 
     .social-links {
