--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Matt Scianna</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Graduate&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -31,9 +31,10 @@
 
     /* FOOTBALL JERSEYS Title */
     h2 {
-      font-family: 'Cardo', serif;
+      font-family: 'Graduate', cursive;
       font-size: 28px;
       color: #8B0000;
+      text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
       margin-bottom: 30px;
       letter-spacing: 2px;
     }
