--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       margin-bottom: 5px;
     }
 
-    /* FOOTBALL JERSEYS Title */
+    /* COMING SOON Title */
     h2 {
       font-family: 'Graduate', cursive;
       font-size: 28px;
@@ -40,7 +40,7 @@
     }
 
     #logo {
-      width: 180px;
+      width: 200px; /* Increased size */
       height: auto;
       margin-bottom: 10px;
     }
@@ -109,7 +109,7 @@
       }
 
       #logo {
-        width: 140px;
+        width: 160px; /* Adjusted for mobile */
       }
 
       .number {
@@ -131,7 +131,7 @@
   <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
-  <h2>FOOTBALL JERSEYS</h2>
+  <h2>COMING SOON</h2>
 
   <div id="countdown">
     <div class="time-section">
