--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
 
-  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
+  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
   <h2>COMING SOON</h2>
@@ -156,10 +156,10 @@
     <div>© 2025 Matt Scianna | Based in New York.</div>
     <div class="social-links">
       <a href="https://www.instagram.com/mattsciannany" target="_blank">
-        <img src="https://github.com/mattscianna/mattscianna/blob/Main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram">
+        <img src="https://github.com/mattscianna/mattscianna/blob/main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram">
       </a>
       <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
-        <img src="https://github.com/mattscianna/mattscianna/blob/Main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok">
+        <img src="https://github.com/mattscianna/mattscianna/blob/main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok">
       </a>
     </div>
   </footer>
@@ -173,7 +173,7 @@
       const distance = futureDate - currentTime;
 
       if (distance <= 0) {
-        document.getElementById("countdown").innerHTML = "DROPPED!";
+        document.getElementById("countdown").innerHTML = "OUT NOW";
         return;
       }
 
