--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     .form-container {
       background-color: #ffffff;
       border: 2px solid #8B0000;
-      padding: 30px;
+      padding: 20px;
       border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
+      width: 80%;
+      max-width: 350px;
       margin-top: 20px;
     }
 
@@ -114,8 +114,8 @@
     }
 
     .social-icons img {
-      width: 40px;
-      height: 40px;
+      width: 45px; /* Slightly increased size */
+      height: 45px; /* Slightly increased size */
       border-radius: 50%;
       transition: transform 0.3s ease;
     }
@@ -127,7 +127,8 @@
 </head>
 <body>
 
-  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
+  <!-- Logo -->
+  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
   <h2>COMING SOON</h2>
@@ -135,7 +136,7 @@
   <!-- SMS Form -->
   <div class="form-container">
     <form action="https://formsubmit.co/YOUR_EMAIL@gmail.com" method="POST" class="notify-form">
-      <h2>STAY UPDATED</h2>
+      <h2>SIGN UP FOR 10% YOUR FIRST ORDER</h2>
       <input type="text" name="name" placeholder="Name" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="tel" name="phone" placeholder="Phone Number" required>
