--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
 
   <!-- Logo -->
-  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
+  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
   <h2>COMING SOON</h2>
@@ -170,10 +170,10 @@
 
   <!-- Footer -->
   <footer>
-    <div class="footer-text">2025 Matt Scianna | Based in New York.</div>
+    <div class="footer-text">© 2025 Matt Scianna | Based in New York.</div>
     <div class="social-icons">
       <a href="https://www.instagram.com/mattsciannany" target="_blank">
-        <img src="https://github.com/mattscianna/mattscianna/blob/main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram">
+        <img src="https://github.com/mattscianna/mattscianna/blob/main/E83290DB-0475-40FD-B3B4-3375E340C0D1.png?raw=true" alt="Instagram">
       </a>
       <a href="https://www.tiktok.com/@mattsciananny" target="_blank">
         <img src="https://github.com/mattscianna/mattscianna/blob/main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok">
