--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
 
   <!-- SMS Form -->
   <div class="form-container">
-    <form id="notify-form" class="notify-form">
-      <h2>SIGN UP FOR 10% OFF YOUR FIRST ORDER.</h2>
-      <input type="text" name="name" id="name" placeholder="Name" required>
-      <input type="email" name="email" id="email" placeholder="Email" required>
-      <input type="tel" name="phone" id="phone" placeholder="Phone Number" required>
-      <button type="submit">NOTIFY ME</button>
-    </form>
+<form action="https://formspree.io/f/xrbqbjpk" method="POST" class="notify-form">
+  <h2>SIGN UP FOR 10% OFF YOUR FIRST ORDER.</h2>
+  <input type="text" name="name" id="name" placeholder="Name" required>
+  <input type="email" name="email" id="email" placeholder="Email" required>
+  <input type="tel" name="phone" id="phone" placeholder="Phone Number" required>
+  <button type="submit">NOTIFY ME</button>
+</form>
   </div>
 
   <!-- Footer -->
